# machathon5.00-judge

./: .gitignore  Dockerfile  README.md  build_demo.bash  rosinstall.yaml  run_docker.sh  run_rocker.bash
car_demo/: CMakeLists.txt  package.xml
car_demo/env-hooks/: gazebo_plugins.sh.in
car_demo/launch/: demo.launch.py  machathon.launch.py  spawn_prius.launch.py
car_demo/models/track/: model.sdf
car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
car_demo/scripts/: camera_script.py  data.py  despawn_prius.py  judge.py  position.py  prius_teleop_keyboard.py  solution.py  spawn_prius.py
car_demo/worlds/: MachathonTrack.world  mcity.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/car_demo/lib/car_demo/: despawn_prius.py  judge.py  prius_teleop_keyboard.py  solution.py  spawn_prius.py
install/car_demo/local/lib/python3.10/dist-packages/car_demo/: __init__.py
install/car_demo/local/lib/python3.10/dist-packages/car_demo-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/car_demo/share/ament_index/resource_index/package_run_dependencies/: car_demo
install/car_demo/share/ament_index/resource_index/parent_prefix_path/: car_demo
install/car_demo/share/car_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/car_demo/share/car_demo/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  car_demoConfig-version.cmake  car_demoConfig.cmake
install/car_demo/share/car_demo/environment/: ament_prefix_path.dsv  gazebo_plugins.dsv  gazebo_plugins.sh  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/car_demo/share/car_demo/launch/: demo.launch.py  machathon.launch.py  spawn_prius.launch.py
install/car_demo/share/car_demo/models/track/: model.config  model.sdf
install/car_demo/share/car_demo/models/track/meshes/: SimulationTrack.dae  SimulationTrack.stl
install/car_demo/share/car_demo/worlds/: MachathonTrack.world
install/prius_description/share/ament_index/resource_index/package_run_dependencies/: prius_description
install/prius_description/share/ament_index/resource_index/parent_prefix_path/: prius_description
install/prius_description/share/prius_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  model.config  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prius_description/share/prius_description/cmake/: prius_descriptionConfig-version.cmake  prius_descriptionConfig.cmake
install/prius_description/share/prius_description/environment/: ament_prefix_path.dsv  gazebo_envs.sh  path.dsv
install/prius_description/share/prius_description/meshes/: hybrid_body.mtl  model.config  steering_wheel.mtl  wheel.mtl
install/prius_description/share/prius_description/urdf/: prius.urdf
install/prius_msgs/include/prius_msgs/prius_msgs/msg/: control.h  control.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/prius_msgs/include/prius_msgs/prius_msgs/msg/detail/: control__builder.hpp  control__functions.h  control__rosidl_typesupport_fastrtps_c.h  control__rosidl_typesupport_fastrtps_cpp.hpp  control__struct.h  (+5 more)
install/prius_msgs/share/ament_index/resource_index/package_run_dependencies/: prius_msgs
install/prius_msgs/share/ament_index/resource_index/parent_prefix_path/: prius_msgs
install/prius_msgs/share/ament_index/resource_index/rosidl_interfaces/: prius_msgs
install/prius_msgs/share/prius_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prius_msgs/share/prius_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_prius_msgs__rosidl_generator_cExport-noconfig.cmake  export_prius_msgs__rosidl_generator_pyExport-noconfig.cmake  export_prius_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_prius_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_prius_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  prius_msgsConfig-version.cmake  prius_msgsConfig.cmake  prius_msgs__rosidl_typesupport_cppExport.cmake  prius_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  prius_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  prius_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/prius_msgs/share/prius_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/prius_msgs/share/prius_msgs/msg/: Control.idl  Control.msg
log/: latest_build
prius_description/: CMakeLists.txt
prius_description/meshes/: hybrid_body.mtl  model.config
prius_description/urdf/: prius.urdf
prius_msgs/: CMakeLists.txt
prius_msgs/msg/: Control.msg
(+11 files in other folders)
