<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_demo</name>
  <version>0.0.1</version>
  <description>
  The car demo
  </description>
  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
  <license>APACHE 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <build_depend>prius_description</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>prius_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- <exec_depend>fake_localization</exec_depend> -->
  <!-- <exec_depend>joy</exec_depend> -->
  <!-- <exec_depend>prius_description</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>xterm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_plugin_path="lib"/>  -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/> -->
    <!-- Other tools can request additional information be placed here -->
    <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/> -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}" /> -->
  </export>
</package>